Stream input string characters via codePoints instead of codePointAt